--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -40,33 +40,16 @@
   color: $gray-blue;
 }
 
-.author__more {
+.author__contact {
   text-align: center;
 }
 
-a.say-hello {
-  display: inline-block;
-  padding: 15px 30px;
-  font-size: 13px;
-  font-weight: 700;
-  text-align: center;
-  border-radius: 40px;
-  color: #fff;
-  background-color: $primary-color;
-  transition: all 150ms ease-in-out;
-  &:hover {
-    transform: translate(0px, -5px);
-    box-shadow: 0 10px 20px -4px rgba(30,28,122,0.3);
-  }
+.contact__link .contact__icon {
+  font-size: 20px;
+  color: #333;
+  transition: all 300ms ease;
 }
 
-a.know-more {
-  margin-left: 25px;
-  font-size: 13px;
-  font-weight: 700;
-  color: $gray;
-  text-decoration: underline;
-  &:hover {
-    color: $primary-color;
-  }
+*, *::after, *::before {
+  box-sizing: border-box;
 }
