Add copyright to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,9 @@
       <div class="contact">
         {% include social-icons.html %}
       </div>
+      <div class="copyright">
+        &#169; 2019 Dylan Hand
+      </div>
     </div>
   </footer>
   <!-- end footer -->
