--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -37,3 +37,10 @@
   font-size: 16px;
   color: $dark;
 }
+
+.copyright {
+  padding: 50px;
+  font-size: 11px;
+  text-align: center;
+  color: $gray;
+}
