Lower-case "close" for mobile menu close
This is consistent with lower-case "menu"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <span class="main-nav__open">menu</span>
 
       <div class="main-nav__box">
-        <span class="main-nav__close">Close</span>
+        <span class="main-nav__close">close</span>
 
         <ul class="nav__list list-reset">
           <li class="nav__item">
