--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -53,9 +53,10 @@
 }
 
 .read-more {
-  font-weight: 700;
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 500;
   font-size: 16px;
   line-height: 27px;
-  text-decoration: underline;
-  color: $primary-color;
+  text-decoration: none;
+  color: $gray-dark;
 }
