Replace google fonts with system fonts

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -1,6 +1,7 @@
-// *****************
-// Color Variables
-// *****************
+// *********
+// Variables
+// *********
+$font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Oxygen", Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
 $primary-color: #6b69fa;
 $secondary-color: #ffd001;
 $dark: #333;
