--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -20,7 +20,7 @@
 
 .post__date {
   margin-bottom: 30px;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: $font-family;
   font-size: 12px;
   text-transform: uppercase;
   color: $gray-dark;
@@ -218,7 +218,7 @@
   vertical-align: middle;
   time {
     padding-right: 5px;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: $font-family;
     font-size: 12px;
     text-transform: uppercase;
     color: $gray-dark;
@@ -231,7 +231,7 @@
 }
 
 .post-tags__tag {
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: $font-family;
   font-size: 14px;
   line-height: 24px;
   color: $gray-lighten;
