--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -1,10 +1,16 @@
 // *********
 // Variables
 // *********
+
+// Font
 $font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Oxygen", Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
+
+// Text size
+
+// Color
 $primary-color: #6b69fa;
 $secondary-color: #ffd001;
-$dark: #333;
+$dark: #222;
 $gray: #666;
 $gray-dark: #999;
 $gray-blue: #b3bbcb;
