--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -1,6 +1,6 @@
 /* Author */
 .author {
-  margin: 80px 0;
+  margin: 70px 0;
   padding-bottom: 70px;
   border-bottom: 1px solid $gray-lighten;
   @media (max-width: $mobile) {
@@ -11,9 +11,9 @@
 
 .author__img {
   display: block;
-  max-width: 130px;
-  max-height: 130px;
-  margin: 0 auto 30px;
+  max-width: 160px;
+  max-height: 160px;
+  margin: 0 auto 70px;
   border-radius: 50%;
   background-color: $gray-white;
   transition: opacity 100ms ease;
@@ -33,11 +33,12 @@
 
 .author__bio {
   max-width: 450px;
-  margin: 0 auto 30px;
-  font-size: 16px;
+  margin: 0 auto 0px;
+  font-size: 22px;
+  font-weight: 600;
   line-height: 27px;
   text-align: center;
-  color: $gray-blue;
+  color: $dark;
 }
 
 .author__contact {
