--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -8,7 +8,7 @@ $font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
 // Text size
 
 // Color
-$primary-color: #6b69fa;
+$primary-color: #007aff;
 $secondary-color: #ffd001;
 $dark: #222;
 $gray: #666;
