--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -31,6 +31,13 @@
   margin-left: 30px;
   .nav__link {
     color: $dark;
+    border-radius: 3px;
+    padding: 3px 6px;
+    transition: color 0ms;
+    &:hover {
+      background-color: $primary-color;
+      color: white;
+    }
   }
 }
 
