--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -15,14 +15,14 @@
 .post__title {
   margin-bottom: 10px;
   font-size: 50px;
+  font-weight: 600;
   line-height: 55px;
 }
 
 .post__date {
   margin-bottom: 30px;
   font-family: $font-family;
-  font-size: 12px;
-  text-transform: uppercase;
+  font-size: 16px;
   color: $gray-dark;
 }
 
@@ -43,9 +43,9 @@
 .post__content {
   margin-bottom: 45px;
   p {
-    font-size: 18px;
-    line-height: 32px;
-    color: $gray;
+    font-size: 21px;
+    line-height: 30px;
+    color: $dark;
     img {
       margin: 30px 0;
     }
