--- a/_sass/4-layouts/_page.scss
+++ b/_sass/4-layouts/_page.scss
@@ -9,17 +9,19 @@
 }
 
 .page__head {
-  text-align: center;
+  text-align: left;
 }
 
 .page__title {
   margin-bottom: 30px;
   font-size: 50px;
+  font-weight: 600;
   line-height: 55px;
 }
 
 .page-image {
   margin-bottom: 45px;
+  border-radius: 5px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -34,9 +36,9 @@
 .page__content {
   margin-bottom: 45px;
   p {
-    font-size: 18px;
-    line-height: 32px;
-    color: $gray;
+    font-size: 21px;
+    line-height: 30px;
+    color: $dark;
     img {
       margin: 30px 0;
     }
