Update secondary color

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -9,7 +9,7 @@ $font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
 
 // Color
 $primary-color: #007aff;
-$secondary-color: #ffd001;
+$secondary-color: #007aff;
 $dark: #222;
 $gray: #666;
 $gray-dark: #888;
