Add hidden rainbow background

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -7,6 +7,22 @@ body {
   font-size: 16px;
   color: $dark;
   background-color: #fff;
+  background: linear-gradient(
+    to right,
+    red, red calc(100%/7),
+    orange calc(100%/7),
+    orange calc(2*100%/7),
+    yellow calc(2*100%/7),
+    yellow calc(3*100%/7),
+    green calc(3*100%/7),
+    green calc(4*100%/7),
+    blue calc(4*100%/7),
+    blue calc(5*100%/7),
+    indigo calc(5*100%/7),
+    indigo calc(6*100%/7),
+    violet calc(6*100%/7),
+    violet 100%,
+  );
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   input, textarea {
