--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 {% include head.html %}
 
 <body>
+  <div class="super-container">
 
   {% if site.google-analytics %}
     {% include google-analytics.html %}
@@ -25,6 +26,7 @@
   <script src="{{ site.baseurl }}/assets/js/vendors/jquery.fitvids.js"></script>
   <script src="{{ site.baseurl }}/assets/js/common.js"></script>
   <!-- end js -->
+  </div>
 </body>
 
 </html>
