--- a/_sass/1-tools/_grid.scss
+++ b/_sass/1-tools/_grid.scss
@@ -2,6 +2,13 @@ $desktop: 992px;
 $tablet:  768px;
 $mobile:  576px;
 
+.super-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
 .container {
   max-width: 700px;
 }
