Use rem units and resize text for mobile devices

--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -27,7 +27,7 @@
 .author__bio {
   max-width: 450px;
   margin: 0 auto 0px;
-  font-size: 22px;
+  font-size: 1.15rem;
   font-weight: 600;
   line-height: 27px;
   text-align: center;
