--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -6,6 +6,11 @@
 $font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Oxygen", Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
 
 // Text size
+$base-text-size: 19px;
+$base-text-size-mobile: 16px;
+$big-text-size: 1.15rem;
+$small-text-size: 0.87rem;
+
 
 // Color
 $primary-color: #007aff;
