--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -2,6 +2,13 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: $base-text-size;
+  @media screen and (max-width: $mobile) {
+    font-size: $base-text-size-mobile;
+  }
+}
+
 body {
   font-family: $font-family;
   font-size: 16px;
