--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -9,24 +9,24 @@
   padding: 30px 0;
 }
 
-.tagline {
-  text-align: center;
-  font-size: 22px;
-  font-weight: 600;
-  color: $gray-dark;
-  letter-spacing: -0.5px;
-}
-
 .logo__link {
-  font-size: 36px;
+  font-size: 1.8rem;
   font-weight: 700;
   color: $dark;
   letter-spacing: -1px;
 }
 
+.tagline {
+  text-align: center;
+  font-size: $big-text-size;
+  font-weight: 600;
+  color: $gray-dark;
+  letter-spacing: -0.5px;
+}
+
 .nav__item {
   display: inline-block;
-  font-size: 22px;
+  font-size: $big-text-size;
   font-weight:600;
   margin-left: 30px;
   .nav__link {
