--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -13,16 +13,15 @@
 }
 
 .post__title {
-  margin-bottom: 10px;
-  font-size: 50px;
+  margin-bottom: 0.5rem;
+  font-size: 2rem;
   font-weight: 600;
-  line-height: 55px;
 }
 
 .post__date {
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
   font-family: $font-family;
-  font-size: 16px;
+  font-size: $small-text-size;
   color: $gray-dark;
 }
 
@@ -43,8 +42,8 @@
 .post__content {
   margin-bottom: 45px;
   p {
-    font-size: 21px;
-    line-height: 30px;
+    font-size: 1.1rem;
+    line-height: 1.58; /*medium.com*/
     color: $dark;
     img {
       margin: 30px 0;
