Left-align tagline

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -17,7 +17,7 @@
 }
 
 .tagline {
-  text-align: center;
+  padding-left: 2px;
   font-size: $big-text-size;
   font-weight: 600;
   color: $gray-dark;
