--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -233,7 +233,7 @@
 
 .post-tags__tag {
   font-family: $font-family;
-  font-size: 14px;
+  font-size: 0.8rem;
   line-height: 24px;
   color: $gray-lighten;
   &:after {
