Lighten secondary color

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -14,7 +14,7 @@ $small-text-size: 0.87rem;
 
 // Color
 $primary-color: #007aff;
-$secondary-color: #007aff;
+$secondary-color: #007aff77;
 $dark: #222;
 $gray: #666;
 $gray-dark: #888;
