--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -5,7 +5,7 @@
   display: -ms-flex;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   padding: 30px 0;
 }
 
