--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -44,10 +44,10 @@
 /* Mobile Nav */
 .main-nav__open {
   position: absolute;
-  top: 50%;
+  top: 2.5rem;
   right: 0;
-  transform: translateY(-50%);
   z-index: 10;
+  font-size: $big-text-size;
   visibility: hidden;
   opacity: 0;
   cursor: pointer;
@@ -59,8 +59,9 @@
 
 .main-nav__close {
   position: fixed;
-  top: 30px;
-  right: 20px;
+  top: 2.5rem;
+  right: 30px;
+  font-size: $big-text-size;
   visibility: hidden;
   opacity: 0;
   cursor: pointer;
