--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -23,7 +23,7 @@
   display: block;
   width: 100px;
   height: 100px;
-  border-radius: 50%;
+  border-radius: 5px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
