--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         {% include social-icons.html %}
       </div>
       <div class="copyright">
-        &#169; 2019 Dylan Hand
+        &#169; 2019-2020 Dylan Hand
       </div>
     </div>
   </footer>
