--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       <div class="main-nav__box">
         <span class="main-nav__close">close</span>
 
-        <ul class="nav__list list-reset">
+        <!-- <ul class="nav__list list-reset">
           <li class="nav__item">
             <a href="{{site.baseurl}}/" class="nav__link">Home</a>
           </li>
@@ -30,7 +30,7 @@
           {% endif %}
             {% endunless %}
           {% endfor %}
-        </ul>
+        </ul> -->
 
       </div>
 
