Add privacy policy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,9 @@
       <div class="copyright">
         &#169; 2019-2020 Dylan Hand
       </div>
+      <div class="footer__links">
+        <a href={% link _pages/privacy.md %} >Privacy Policy</a>
+      </div>
     </div>
   </footer>
   <!-- end footer -->
