Disable menu on mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,13 +11,14 @@
       </div>
     </a>
 
+    <!--
     <nav class="main-nav">
       <span class="main-nav__open">menu</span>
 
       <div class="main-nav__box">
         <span class="main-nav__close">close</span>
 
-        <!-- <ul class="nav__list list-reset">
+        <ul class="nav__list list-reset">
           <li class="nav__item">
             <a href="{{site.baseurl}}/" class="nav__link">Home</a>
           </li>
@@ -30,11 +31,12 @@
           {% endif %}
             {% endunless %}
           {% endfor %}
-        </ul> -->
+        </ul>
 
       </div>
 
     </nav>
+    -->
 
   </header>
   <!-- end header -->
