--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,8 @@
   <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="196x196" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="196x196" href="/apple-touch-icon-196.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="/apple-touch-icon-96.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
   <link rel="manifest" href="/site.webmanifest">
