--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -28,10 +28,9 @@
 .post-image {
   margin-bottom: 45px;
   border-radius: 5px;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: $gray-white;
   &:after {
     content: '';
     display: table;
