--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,10 @@
         {% include social-icons.html %}
       </div>
       <div class="copyright">
-        &#169; 2019-2020 Dylan Hand
+        &#169; 2019-2020 Dylan Hand 
+        <br>
+        <br>
+        Coded by &#128400;
       </div>
       <div class="footer__links">
         <a href={% link _pages/privacy.md %} >Privacy Policy</a>
