--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -39,9 +39,18 @@
 }
 
 .contact__link .contact__icon {
-  font-size: 20px;
-  color: $gray-dark;
+  height: 24px;
+  width: 24px;
   transition: all 300ms ease;
+}
+
+use.contact__icon {
+  fill: $gray-dark;
+  transition: all 300ms ease;
+}
+
+use.contact__icon:hover {
+  fill: $gray;
 }
 
 .contact__link:hover .contact__icon {
