source branch - Add Fly High presave link

--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -34,9 +34,12 @@
   color: $dark;
 }
 
+.author__contact__profile { 
+  margin-bottom: 3rem;
+}
+
 .author__contact {
   text-align: center;
-  margin-bottom: 3rem;
 }
 
 .contact__link .contact__icon {
