source branch - Update analytics tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <head>
   <meta charset="utf-8">
+  {% if site.google-analytics %}
+    {% include google-analytics.html %}
+  {% endif %}
 
   <!-- mobile responsive meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
